# AiringDeck

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  VERSIONE.md  pyproject.toml  requirements.txt  setup.py
docs/: anilist_compliance.md  dev_profiling.md  implementation_roadmap.md  manual_dpi_multimonitor_checklist.md  manual_no_tracker_checklist.md  multithreading_analysis.md  native_optimization.md  privacy_data_policy.md  product_scope_no_tracker.md  quality_assurance.md  release_3.4.0_commit_details.md  release_compliance_checklist.md  release_notes_3.4.0.md  release_notes_template.md  release_process.md  release_scope_3.4.0.it.md  release_scope_3.4.0.md  test_report_full.md
installer/: ANILIST_API_NOTICE.txt  AiringDeck.iss
scripts/: build_windows.py  build_windows_installer.py  generate_brand_icon.py  profile_dev.py  profile_system.py  run_quality_suite.py
src/: main.py
src/core/: _airingdeck_native.c  anime_model.py  app_controller.py  native_accel.py  worker.py
src/services/: anilist_service.py  auth_service.py  update_service.py
src/ui/qml/: BootShell.qml  MainContent.qml  main.qml
src/ui/qml/components/: AboutDialog.qml  Logo.qml  SplashOverlay.qml
src/ui/qml/components/Calendar/: AnimeCard.qml
src/ui/qml/components/Settings/: SettingsDialog.qml
tests/: conftest.py  test_anilist_service.py  test_anime_model.py  test_app_controller_filters.py  test_auth_service.py  test_concurrency_controller.py  test_fuzz_filter_entries.py  test_integration_controller_flow.py  test_main_bootstrap.py  test_native_accel.py  test_no_tracker_mode.py  test_ui_localization.py  test_update_service.py  test_worker.py
